--- a/consumo.html
+++ b/consumo.html
@@ -264,34 +264,30 @@
     <nav class="sidebar">
         <div class="brand">HIP ENERGY</div>
         <div class="nav-items">
-            <a href="index.html" class="nav-item">
+            <a href="index.html" class="nav-item active">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
-            <a href="#" class="nav-item active">
+            <a href="consumo.html" class="nav-item">
                 <i class="fas fa-chart-line"></i>
                 <span>Consumption</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="facturas.html" class="nav-item">
                 <i class="fas fa-file-invoice-dollar"></i>
                 <span>Bills</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="notificaciones.html" class="nav-item">
                 <i class="fas fa-bell"></i>
                 <span>Notifications</span>
                 <div class="notification-badge">4</div>
             </a>
-            <a href="#" class="nav-item">
+            <a href="citas.html" class="nav-item">
                 <i class="fas fa-calendar-alt"></i>
                 <span>Appointments</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="modoaccesible.html" class="nav-item">
                 <i class="fas fa-exclamation-triangle"></i>
                 <span>Fault Reporting</span>
-            </a>
-            <a href="#" class="nav-item" id="accessibleModeToggle">
-                <i class="fas fa-universal-access"></i>
-                <span>Accessible Mode</span>
             </a>
         </div>
         <div class="vision-modes">
