--- a/consumo.html
+++ b/consumo.html
@@ -289,6 +289,10 @@
                 <i class="fas fa-exclamation-triangle"></i>
                 <span>Fault Reporting</span>
             </a>
+            <a href="#" class="nav-item" id="accessibleModeToggle">
+                <i class="fas fa-universal-access"></i>
+                <span>Accessible Mode</span>
+            </a>
         </div>
         <div class="vision-modes">
             <a href="#" class="nav-item" id="protanopiaToggle">
