--- a/consumo.html
+++ b/consumo.html
@@ -264,11 +264,11 @@
     <nav class="sidebar">
         <div class="brand">HIP ENERGY</div>
         <div class="nav-items">
-            <a href="index.html" class="nav-item active">
+            <a href="index.html" class="nav-item">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
-            <a href="consumo.html" class="nav-item">
+            <a href="consumo.html" class="nav-item active">
                 <i class="fas fa-chart-line"></i>
                 <span>Consumption</span>
             </a>
