--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         :root {
             --primary-color: #f2c517;
             --primary-dark: #d4a017;
-            --accent-color: #8833ff;
+            --accent-color: #ffffff;
             --text-color: #000;
             --transition-speed: 0.3s;
             --divider-width: 6px;
@@ -211,7 +211,7 @@
     <nav class="sidebar">
         <div class="brand">HIP ENERGY</div>
         <div class="nav-items">
-            <a href="index.html" class="nav-item active">
+            <a href="home.html" class="nav-item active">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
@@ -236,10 +236,6 @@
                 <i class="fas fa-exclamation-triangle"></i>
                 <span>Fault Reporting</span>
             </a>
-            <a href="#" class="nav-item" id="accessibleModeToggle">
-                <i class="fas fa-universal-access"></i>
-                <span>Accessible Mode</span>
-            </a>
         </div>
         <div class="vision-modes">
             <a href="#" class="nav-item" id="protanopiaToggle">
@@ -260,7 +256,7 @@
             </a>
         </div>
         <div class="logo-container">
-            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Mesa%20de%20trabajo%201-TjFuYsVlQgl9Ta1BrpM07YkWC0xgbr.png" alt="HIP ENERGY Logo" class="logo">
+            <img src="z.png" alt="HIP ENERGY Logo" class="logo">
         </div>
     </nav>
 
