--- a/consumo.html
+++ b/consumo.html
@@ -11,7 +11,7 @@
         :root {
             --primary-color: #f2c517;
             --primary-dark: #d4a017;
-            --accent-color: #8833ff;
+            --accent-color: #ffffff;
             --text-color: #000;
             --transition-speed: 0.3s;
             --divider-width: 6px;
@@ -269,7 +269,7 @@
     <nav class="sidebar">
         <div class="brand">HIP ENERGY</div>
         <div class="nav-items">
-            <a href="index.html" class="nav-item">
+            <a href="home.html" class="nav-item">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
@@ -294,10 +294,6 @@
                 <i class="fas fa-exclamation-triangle"></i>
                 <span>Fault Reporting</span>
             </a>
-            <a href="#" class="nav-item" id="accessibleModeToggle">
-                <i class="fas fa-universal-access"></i>
-                <span>Accessible Mode</span>
-            </a>
         </div>
         <div class="vision-modes">
             <a href="#" class="nav-item" id="protanopiaToggle">
@@ -318,7 +314,7 @@
             </a>
         </div>
         <div class="logo-container">
-            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Normal-S0ZM46xhJ8Mm0vNUqKXmmqWS9gTvZJ.png" alt="HIP ENERGY Logo" class="logo">
+            <img src="images/hiplogo.jpg" alt="HIP ENERGY Logo" class="logo">
         </div>
     </nav>
 
