--- a/facturas.html
+++ b/facturas.html
@@ -11,7 +11,7 @@
         :root {
             --primary-color: #f2c517;
             --primary-dark: #d4a017;
-            --accent-color: #8833ff;
+            --accent-color: #ffffff;
             --text-color: #000;
             --transition-speed: 0.3s;
             --divider-width: 6px;
@@ -355,7 +355,7 @@
     <nav class="sidebar">
         <div class="brand">HIP ENERGY</div>
         <div class="nav-items">
-            <a href="index.html" class="nav-item active">
+            <a href="home.html" class="nav-item">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
@@ -363,7 +363,7 @@
                 <i class="fas fa-chart-line"></i>
                 <span>Consumption</span>
             </a>
-            <a href="facturas.html" class="nav-item">
+            <a href="facturas.html" class="nav-item active">
                 <i class="fas fa-file-invoice-dollar"></i>
                 <span>Bills</span>
             </a>
@@ -400,7 +400,7 @@
             </a>
         </div>
         <div class="logo-container">
-            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Normal-S0ZM46xhJ8Mm0vNUqKXmmqWS9gTvZJ.png" alt="HIP ENERGY Logo" class="logo">
+            <img src="images/hiplogo.jpg" alt="HIP ENERGY Logo" class="logo">
         </div>
     </nav>
 
