--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         :root {
             --primary-color: #f2c517;
             --primary-dark: #d4a017;
-            --accent-color: #f2c517;
+            --accent-color: #ffffff;
             --text-color: #000;
             --transition-speed: 0.3s;
             --divider-width: 6px;
@@ -199,8 +199,8 @@
         .submit-btn {
             width: 100%;
             padding: 0.75rem;
-            background-color: var(--accent-color);
-            color: white;
+            background-color: #f3c517;
+            color: yellow;
             border: none;
             border-radius: 4px;
             cursor: pointer;
@@ -244,19 +244,15 @@
     <nav class="sidebar">
         <div class="brand">HIP ENERGY</div>
         <div class="nav-items">
-            <a href="#" class="nav-item" id="accessibleModeToggle">
-                <i class="fas fa-universal-access"></i>
-                <span>Accessible Mode</span>
-            </a>
-            <a href="#" class="nav-item active">
+            <a href="index.html" class="nav-item active">
                 <i class="fas fa-sign-in-alt"></i>
                 <span>Login</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="register.html" class="nav-item">
                 <i class="fas fa-user-plus"></i>
                 <span>Register</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="recover_password.html" class="nav-item">
                 <i class="fas fa-key"></i>
                 <span>Recover Password</span>
             </a>
@@ -280,29 +276,42 @@
             </a>
         </div>
         <div class="logo-container">
-            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Normal-S0ZM46xhJ8Mm0vNUqKXmmqWS9gTvZJ.png" alt="HIP ENERGY Logo" class="logo">
+            <img src="images/hiplogo.jpg" alt="HIP ENERGY Logo" class="logo">
         </div>
     </nav>
 
-    <main class="main-content">
-        <h1>Login</h1>
-        <div class="form-container">
-            <form id="loginForm">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit" class="submit-btn">Login</button>
-            </form>
-            <div class="recover-password">
-                <a href="#">Recover password</a>
+<main class="main-content">
+    <h1>Login</h1>
+    <div class="form-container">
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
             </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="submit-btn">Login</button>
+        </form>
+        <div class="recover-password">
+            <a href="#">Recover password</a>
         </div>
-    </main>
+    </div>
+</main>
+
+<style>
+    .recover-password a {
+        color: #f3c517;  /* Color amarillo deseado */
+        text-decoration: none;  /* Elimina el subrayado */
+        transition: color 0.3s ease;  /* Transición suave cuando cambia el color */
+    }
+
+    .recover-password a:hover {
+        color: #d4a017;  /* Color cuando se pase el ratón por encima (puedes elegir otro) */
+    }
+</style>
+
 
     <svg style="display: none;">
         <defs>
