--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
         :root {
             --primary-color: #f2c517;
             --primary-dark: #d4a017;
-            --accent-color: #f2c517; /* Cambiado de #8833ff a #f2c517 */
+            --accent-color: #ffffff;
             --text-color: #000;
             --transition-speed: 0.3s;
             --divider-width: 6px;
@@ -254,19 +254,15 @@
     <nav class="sidebar">
         <div class="brand">HIP ENERGY</div>
         <div class="nav-items">
-            <a href="#" class="nav-item" id="accessibleModeToggle">
-                <i class="fas fa-universal-access"></i>
-                <span>Accessible Mode</span>
-            </a>
-            <a href="#" class="nav-item">
+            <a href="index.html" class="nav-item">
                 <i class="fas fa-sign-in-alt"></i>
                 <span>Login</span>
             </a>
-            <a href="#" class="nav-item active">
+            <a href="register.html" class="nav-item active">
                 <i class="fas fa-user-plus"></i>
                 <span>Register</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="recover_password.html" class="nav-item">
                 <i class="fas fa-key"></i>
                 <span>Recover Password</span>
             </a>
@@ -290,34 +286,51 @@
             </a>
         </div>
         <div class="logo-container">
-            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Normal-S0ZM46xhJ8Mm0vNUqKXmmqWS9gTvZJ.png" alt="HIP ENERGY Logo" class="logo">
+            <img src="images/hiplogo.jpg" alt="HIP ENERGY Logo" class="logo">
         </div>
     </nav>
 
-    <main class="main-content">
-        <h1>Sign Up</h1>
-        <div class="form-container">
-            <form id="signupForm">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="form-group">
-                    <label for="confirmPassword">Confirm Password</label>
-                    <input type="password" id="confirmPassword" name="confirmPassword" required>
-                </div>
-                <button type="submit" class="submit-btn">Sign Up</button>
-            </form>
-        </div>
-    </main>
+<main class="main-content">
+    <h1>Sign Up</h1>
+    <div class="form-container">
+        <form id="signupForm">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" required>
+            </div>
+            <button type="submit" class="submit-btn">Sign Up</button>
+        </form>
+    </div>
+</main>
+
+<style>
+    .submit-btn {
+        background-color: #f3c517;  /* Color de fondo amarillo */
+        color: white;  /* Texto en blanco */
+        padding: 0.75rem 1.5rem;
+        border: none;
+        border-radius: 0.25rem;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .submit-btn:hover {
+        background-color: #d4a017;  /* Cambio de color al pasar el ratón por encima */
+    }
+</style>
+
 
     <svg style="display: none;">
         <defs>
